<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="@dimen/tzzdp"
        android:layout_height="@dimen/tzzdp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/sixtydp"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/sixdp"
        app:cardElevation="@dimen/threedp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourfivedp"
                android:layout_marginTop="@dimen/tendp">

                <View
                    android:layout_width="@dimen/eightdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/greencolor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/fiftydp"
                    android:text="@string/login"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/eighteensp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fiftydp"
                android:layout_marginTop="@dimen/tendp"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/thirtydp"
                android:paddingStart="@dimen/fiftydp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/greycolor">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingBottom="@dimen/twodp"
                        android:textColor="@color/greencolor"
                        android:textSize="@dimen/eighteensp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fiftydp"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/thirtydp"
                android:paddingStart="@dimen/fiftydp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/greycolor">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="@dimen/twodp"
                        android:textColor="@color/greencolor"
                        android:textSize="@dimen/eighteensp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixtydp"
                android:layout_marginTop="@dimen/twofivedp"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="@dimen/onefiftydp"
                    android:layout_height="@dimen/fiftydp"
                    android:text="@string/go"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/forgot_password"
                android:onClick="forgotPassword"
                android:textColor="@color/greycolor"
                android:textSize="@dimen/onetwosp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cv"
        android:layout_alignTop="@id/cv"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginRight="@dimen/threetwodp"
        android:layout_marginTop="@dimen/eightdp"
        android:src="@drawable/plus"
        android:transitionName="@string/loginfab"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.088"
        app:fabSize="normal"
        android:contentDescription="@string/add_user_screen"/>

</android.support.constraint.ConstraintLayout>
