<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ttzdp"
        android:elevation="@dimen/eightdp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginEnd="@dimen/sixedp"
            app:expandedTitleMarginStart="@dimen/sixedp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/main_image"
                    android:id="@+id/imageDetails"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ttzdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder" />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="@dimen/eightdp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/sevendp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/onedp"
                app:cardCornerRadius="@dimen/fivedp"
                app:cardBackgroundColor="@color/bg_two_color"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:textColor="@color/widgetcolor"
                        android:textSize="@dimen/tzsp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:textSize="0.6sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/ingredRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:textSize="0.6sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/procedure"
                android:textSize="@dimen/twentysp"
                android:textColor="@color/widgetcolor"
                android:textStyle="bold" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/onedp"
                app:cardCornerRadius="@dimen/fivedp">

                <TextView
                    android:id="@+id/descDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/video_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_three"
                android:textSize="@dimen/twentyfoursp"
                android:textColor="@color/tex_color" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/mat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/fav_button"
        app:fabSize="normal"
        android:onClick="favButton"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/favourites_button"/>
</android.support.design.widget.CoordinatorLayout>



